@@ -4,6 +4,11 @@ Changelog
 0.2 (unreleased)
 ----------------
 
+- You can now add ``only_these_addresses`` as an argument to the send
+  method.  This forces sending only to those addresses and ignoring
+  all others.
+  [maurits]
+
 - Fixed possible UnicodeDecodeError when the plain text or html part
   of the email was not unicode.
   [maurits]
